change project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://conrading.github.io/wroclaw-project/",
+  "homepage": "https://conrading.github.io/difference-is-fine/",
   "name": "introduction",
   "version": "0.1.0",
   "private": true,
